--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ size="+3">/</font></font></td> --> <!-- <td><font size=+3>&nbsp;
 </font></td> --> 
     <td>
 
-<font size=+2>Experience</font>
+<font size=+2>Experience:</font>
 <ul>
-  <li> VP Engineering & Distinguished Scientist, WeWork (present)
-  <li> Editor in Chief, IEEE Data Engineering Bulletin (present)
+  <li> <b>VP Engineering & Distinguished Scientist, WeWork (present)</b>
+  <li> <b>Editor in Chief, IEEE Data Engineering Bulletin (present)</b>
   <li> Director of Natural Language Processing, Amazon
   <li> Engineering Manager and Research Scientist, Facebook
   <li> Staff Research Scientist, Google Research
@@ -54,9 +54,10 @@ size="+3">/</font></font></td> --> <!-- <td><font size=+3>&nbsp;
   <li> Research Staff Member, IBM Research
 </ul>
 
-<font size=+2>Awards:</font>
+<font size=+2>Honors:</font>
 <ul>
-<li> <b>Best Paper Award</b>, <i>Short Text Understanding Through Lexical-Semantic Analysis</i>, in the 31st International Conference on Data Engineering (ICDE), 2015
+  <li> <b>IEEE Fellow</b>, 2017
+  <li> <b>Best Paper Award</b>, <i>Short Text Understanding Through Lexical-Semantic Analysis</i>, in the 31st International Conference on Data Engineering (ICDE), 2015
 <li> <b>ICDM 10 Year Highest Impact Paper Award</b>, <i>Moment: Maintaining closed frequent itemsets over a stream sliding window</i> (published in ICDM 2004).
 <li> <b>Best Student Paper Runner-Up Award</b>, <i>Inverse Time Dependency in
 Convex Regularized Learning</i>, in the 9th International Conference
@@ -70,8 +71,7 @@ International Conference on Conceptual Modeling (ER), 2008
 <p>
 <ul>
 <li> <a href="https://www.linkedin.com/in/haixun/">LinkedIn</a>, <a href="https://scholar.google.com/citations?user=Q1mcglAAAAAJ&hl=en">Google Scholor</a>, <a href="https://dblp.org/pers/hd/w/Wang:Haixun">DBLP</a>
-<li> <a href="http://haixunwang.spaces.live.com">my blog</a> (outdated)
-<li> Medium articles related to my previous work:
+<li> Articles published on medium.com:
 <ul>
 <li> <a href="https://medium.com/gobeyond-ai/the-coming-disruption-in-e-commerce-search-3ffa0eb9a5d9">The coming disruption to e-commerce search</a>
 <li>
@@ -79,6 +79,7 @@ International Conference on Conceptual Modeling (ER), 2008
 <li>
 <a href="https://medium.com/gobeyond-ai/getting-nlp-ready-for-business-4cc96d81c933">Getting NLP Ready for Business</a>
 </ul>  
+<li> <a href="http://haixunwang.spaces.live.com">my blog</a> (really old)
 <li> Projects I initiated and led at Microsoft
   Research
   <ul><li> <a href=probase.html>Probase</a> (a data driven semantic
