--- a/index.html
+++ b/index.html
@@ -72,13 +72,12 @@ International Conference on Conceptual Modeling (ER), 2008
 <ul>
 <li> <a href="https://www.linkedin.com/in/haixun/">LinkedIn</a>, <a href="https://scholar.google.com/citations?user=Q1mcglAAAAAJ&hl=en">Google Scholor</a>, <a href="https://dblp.org/pers/hd/w/Wang:Haixun">DBLP</a>
 <li> Articles published on medium.com:
-<ul>
-<li> <a href="https://medium.com/gobeyond-ai/the-coming-disruption-in-e-commerce-search-3ffa0eb9a5d9">The coming disruption to e-commerce search</a>
-<li>
-<a href="https://medium.com/gobeyond-ai/a-reading-list-and-mini-survey-of-conversational-ai-32fceea97180">An Annotated Reading List of Conversational AI</a>
-<li>
-<a href="https://medium.com/gobeyond-ai/getting-nlp-ready-for-business-4cc96d81c933">Getting NLP Ready for Business</a>
-</ul>  
+  <ul>
+    <li><a href="https://medium.com/swlh/the-data-science-behind-the-man-who-solved-the-market-1398ed6ed35e">The Data Science Behind the Man Who Solved the Market</a>
+    <li><a href="https://medium.com/gobeyond-ai/the-coming-disruption-in-e-commerce-search-3ffa0eb9a5d9">The coming disruption to e-commerce search</a>
+    <li><a href="https://medium.com/gobeyond-ai/a-reading-list-and-mini-survey-of-conversational-ai-32fceea97180">An Annotated Reading List of Conversational AI</a>
+    <li><a href="https://medium.com/gobeyond-ai/getting-nlp-ready-for-business-4cc96d81c933">Getting NLP Ready for Business</a>
+  </ul>  
 <li> <a href="http://haixunwang.spaces.live.com">my blog</a> (really old)
 <li> Projects I initiated and led at Microsoft
   Research
