--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  <p>
 <font size="+1">
 
-VP Engineering & Distinguished Scientist @ WeWork<br>
+VP Engineering, Algorithms & Distinguished Scientist @ Instacart<br>
 IEEE Fellow<br>
           <br>
           Email: haixun @ gmail . com <br>
